# Attitude_estimation

./: CMakeLists.txt  README.md
include/: FeedbackParticleFilter.h  Filter.h  InvariantEKF.h  Lie_group.h  MultiplicativeEKF.h  ParticleFilter.h  Sensor.h  Target.h  World.h
src/: CMakeLists.txt  FeedbackParticleFilter.cpp  Filter.cpp  InvariantEKF.cpp  Lie_group.cpp  MultiplicativeEKF.cpp  ParticleFilter.cpp  Sensor.cpp  Target.cpp  World.cpp  main.cpp
src/Filters/: Filter.cpp  MultiplicativeEKF.cpp  ParticleFilter.cpp
test/: test.cpp
